getting the image hiding right on phone

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Kevin Ushey</title>
 	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 	<style>
 		body {
@@ -129,8 +130,11 @@
 
 		</div>
 		<!-- right part of page -->
-		<div class="span4 hidden-phone">
-			<img style="float: right;" src="img/kevin.jpg">
+		<div class="hidden-phone">
+
+			<div class="span4">
+				<img style="float: right;" src="img/kevin.jpg">
+			</div>
 		</div>
 
 	</div>
