Rcpp Gallery updates; data scientist quote from Josh Wills

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				<span class="icon-bar"></span>
 				<span class="icon-bar"></span>
 			</button>
-			<a class="brand" href="#">Kevin's Homepage</a>
+			<a class="brand" href="#">Kevin Ushey</a>
 			<div class="nav-collapse collapse">
 				<ul class="nav">
 					<li class="active"><a href="#">Home</a></li>
@@ -44,11 +44,22 @@
 		<div class="span8">
 			<h1 style="color: #445555;">Kevin Ushey</h1>
 			<p class="lead">Data Scientist / Statistical Programmer</p>
+			<blockquote>
+				<p style="font-size: 11pt">
+					Data Scientist (noun): A person who is better at statistics than any software engineer,
+					and better at software engineering than any statistician.
+				</p>
+				<small>Josh Wills of <a href="http://www.cloudera.com/content/cloudera/en/home.html">Cloudera</a></small>
+			</blockquote>
 
 			<div id="about">
 				<h2>About Me</h2>
 
-				<p>I am a statistical programmer within the James Hogg Research Center in Vancouver, BC.</p>
+				<p>
+					I am a statistical programmer within the James Hogg Research Center in Vancouver, BC.
+					I am an accomplished R programmer, but am also experienced with Python, JavaScript, C, and C++
+					programming.
+				</p>
 				<p>
 					I completed an MSc in Statistics at the University of British Columbia, under the supervision of
 					<a href="http://www.stat.ubc.ca/~jenny/">Jenny Bryan</a>. My
@@ -58,7 +69,11 @@
 				</p>
 				<p>
 					Currently, my work involves the analysis of genome-wide association studies, for identifying
-					genetic markers associated with asthma phenotypes.
+					genetic markers associated with asthma phenotypes. In addition, we are now attempting to
+					identify whether or not the methylation status of CpG sites might be related to the
+					genotype of nearby markers associated with disease,
+					to further unveil the relationship between the human
+					epigenetic architecture and asthma phenotypes.
 				</p>
 			</div>
 
@@ -111,8 +126,25 @@
 					<small>
 						<a href="https://github.com/cdrv/EasySVGAnnotation">GitHub</a>
 					</small>
-
 				</p>
+
+				<h4>Rcpp Gallery</h4>
+				<p>
+					The <a href="http://gallery.rcpp.org/">Rcpp Gallery</a> is a set of user-submitted articles on
+					using Rcpp to write, compile and link C++ code that can operate on R objects.
+					I have contributed a number of articles on the basics of using Rcpp:
+				</p>
+				<ul>
+					<li>
+						<a href="http://gallery.rcpp.org/articles/boost-foreach/">Using Boost's foreach macro</a>
+					</li>
+					<li>
+						<a href="http://gallery.rcpp.org/articles/fast-factor-generation/">Fast factor generation with Rcpp</a>
+					</li>
+					<li>
+						<a href="http://gallery.rcpp.org/articles/strings_with_rcpp/">Handling strings with Rcpp</a>
+					</li>
+				</ul>
 			</div>
 
 			<div id="publications">
