add new Rcpp gallery submission

--- a/index.html
+++ b/index.html
@@ -138,6 +138,9 @@
 				</p>
 				<ul>
 					<li>
+						<a href="http://gallery.rcpp.org/articles/rcpp-wrap-and-recurse/">Dynamic Wrapping and Recursion in Rcpp</a>
+					</li>
+					<li>
 						<a href="http://gallery.rcpp.org/articles/boost-foreach/">Using Boost's foreach macro</a>
 					</li>
 					<li>
