--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				</p>
 				<ul>
 					<li>
-						<a href="http://gallery.rcpp.org/articles/rcpp-wrap-and-recurse/">Dynamic Wrapping and Recursion in Rcpp</a>
+						<a href="http://gallery.rcpp.org/articles/rcpp-wrap-and-recurse/">Dynamic Wrapping and Recursion with Rcpp</a>
 					</li>
 					<li>
 						<a href="http://gallery.rcpp.org/articles/boost-foreach/">Using Boost's foreach macro</a>
