update how pubs are displayed

--- a/index.html
+++ b/index.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Kevin Ushey</title>
-	<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
-	<style>
-		body {
-			padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-		}
-	</style>
-	<link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
-	<link href="FontAwesome/css/font-awesome.min.css" rel="stylesheet">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Kevin Ushey</title>
+<link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<style>
+	body {
+		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
+	}
+</style>
+<link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
+<link href="FontAwesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
 <body>
 
@@ -133,7 +133,8 @@
 				<h4>Rcpp Gallery</h4>
 				<p>
 					The <a href="http://gallery.rcpp.org/">Rcpp Gallery</a> is a set of user-submitted articles on
-					using Rcpp to write, compile and link C++ code that can operate on R objects.
+					using <a href="http://dirk.eddelbuettel.com/code/rcpp.html">Rcpp</a> 
+					to write, compile and link C++ code that can operate on R objects.
 					I have contributed a number of articles on the basics of using Rcpp:
 				</p>
 				<ul>
@@ -154,9 +155,13 @@
 
 			<div id="publications">
 				<h2>Publications</h2>
-				<strong>Synthetic Lethality of Cohesins with PARPs and Replication Fork Mediators</strong><br>
+				<strong>
+					Synthetic Lethality of Cohesins with PARPs and Replication Fork Mediators
+				</strong>
+					(<a href="http://www.plosgenetics.org/article/info%3Adoi%2F10.1371%2Fjournal.pgen.1002574">PLOS Genetics</a>)<br />
 				<small>
-					<a href="http://www.plosgenetics.org/article/info%3Adoi%2F10.1371%2Fjournal.pgen.1002574">PLoS Genetics</a>
+					Jessica L. McLellan, Nigel J. O'Neil, Irene Barrett, Elizabeth Ferree, Derek M. van Pel,
+					Kevin Ushey, Payal Sipahimalani, Jennifer Bryan, Ann M. Rose, Philip Hieter
 				</small>
 
 				<h2 id="contact">Contact</h2>
