updated job summary

--- a/index.html
+++ b/index.html
@@ -56,10 +56,10 @@
 
 			<div id="about">
 				<h2>About Me</h2>
-
 				<p>
-					I am a statistical programmer within the James Hogg Research Center in Vancouver, BC.
-					I am an accomplished R programmer, but am also experienced with Python, JavaScript, C, and C++
+					I am a statistical programmer soon to be joining the <a href="http://www.rglab.org/">RGlab</a>
+					at the <a href="http://www.fhcrc.org/en.html">Fred Hutchinson Cancer Research Center</a>.
+					I am an accomplished R programmer, but am also experienced with Python, JavaScript, C, C++ and Java
 					programming.
 				</p>
 				<p>
@@ -68,14 +68,6 @@
 					<a href="https://circle.ubc.ca/bitstream/id/132997/ubc_2011_fall_ushey_kevin.pdf">thesis</a> (PDF)
 					involved the study of gene-gene and gene-Rx interaction effects, and statistical assessment of these
 					epistatic effects in yeast growth curves.
-				</p>
-				<p>
-					Currently, my work involves the analysis of genome-wide association studies, for identifying
-					genetic markers associated with asthma phenotypes. In addition, we are now attempting to
-					identify whether or not the methylation status of CpG sites might be related to the
-					genotype of nearby markers associated with disease,
-					to further unveil the relationship between the human
-					epigenetic architecture and asthma phenotypes.
 				</p>
 			</div>
 
@@ -86,7 +78,7 @@
 				<p>
 					A set of miscellaneous functions for everything from data subsetting and reshaping functions for
 					faster and easier file I/O and wrapper functions for easy generation of C++-backed apply and tapply-style
-					functions. Essentially, this package is a grab-bag of functions that have made my life easier or
+					functions. Essentially, this package is a grab-bag of functions that have made my life easier
 					when programming in R.
 					<br>
 					<small>
