current job status

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
 			<div id="about">
 				<h2>About Me</h2>
 				<p>
-					I am a statistical programmer soon to be joining the <a href="http://www.rglab.org/">RGlab</a>
-					at the <a href="http://www.fhcrc.org/en.html">Fred Hutchinson Cancer Research Center</a>.
+					I am a statistical programmer at the <a href="http://www.rglab.org/">RGlab</a>
+					within the <a href="http://www.fhcrc.org/en.html">Fred Hutchinson Cancer Research Center</a>.
 					I am an accomplished R programmer, but am also experienced with Python, JavaScript, C, C++ and Java
 					programming.
 				</p>
