update links re: name change

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 			<div id="about">
 				<h2>About Me</h2>
 				<p>
-					I am a statistical programmer at the <a href="http://www.rglab.org/">RGlab</a>
+					I am a statistical programmer at the <a href="http://www.rglab.org/">rglab</a>
 					within the <a href="http://www.fhcrc.org/en.html">Fred Hutchinson Cancer Research Center</a>.
 					I am an accomplished R programmer, but am also experienced with Python, JavaScript, C, C++ and Java
 					programming.
@@ -83,7 +83,7 @@
 					<br>
 					<small>
 						<a href="http://cran.r-project.org/web/packages/Kmisc/index.html">CRAN</a>,
-						<a href="https://github.com/cdrv/Kmisc">GitHub</a>
+						<a href="https://github.com/kevinushey/Kmisc">GitHub</a>
 					</small>
 				</p>
 
@@ -94,7 +94,7 @@
 					<br>
 					<small>
 						<a href="http://cran.r-project.org/web/packages/timeit/">CRAN</a>,
-						<a href="https://github.com/cdrv/timeit">GitHub</a>
+						<a href="https://github.com/kevinushey/timeit">GitHub</a>
 					</small>
 				</p>
 
@@ -118,7 +118,7 @@
 					through JavaScript. These plots embed particularly well in R Markdown documents.
 					<br>
 					<small>
-						<a href="https://github.com/cdrv/EasySVGAnnotation">GitHub</a>
+						<a href="https://github.com/kevinushey/EasySVGAnnotation">GitHub</a>
 					</small>
 				</p>
 
@@ -162,7 +162,7 @@
 						<i class="icon-twitter"></i><strong> Twitter: </strong> <a href="https://twitter.com/kevin_ushey">@kevin_ushey</a>
 					</li>
 					<li>
-						<i class="icon-github"></i><strong> GitHub: </strong> <a href="http://www.github.com/cdrv">github.com/cdrv</a>
+						<i class="icon-github"></i><strong> GitHub: </strong> <a href="http://www.github.com/kevinushey">github.com/kevinushey</a>
 					</li>
 					<li>
 						<i class="icon-linkedin-sign"></i><strong> LinkedIn: </strong> <a href="http://www.linkedin.com/pub/kevin-ushey/42/355/33a">linkedin.com/kevin-ushey</a>
@@ -184,7 +184,7 @@
 	<div class="modal-footer">
 		<p>
 			Designed with <a href="http://twitter.github.com/bootstrap/">Twitter Bootstrap</a>.
-			Hosted on <a href="https://github.com/cdrv/cdrv.github.com">GitHub pages</a>.
+			Hosted on <a href="https://github.com/kevinushey/kevinushey.github.com">GitHub pages</a>.
 			Icons from <a href="http://fortawesome.github.com/Font-Awesome/">Font Awesome</a>.
 		</p>
 	</div>
