--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Kevin Ushey</title>
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
+<link rel="stylesheet" href="css/styles.css"/>
 <style>
 	body {
 		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
@@ -37,7 +38,7 @@
 	</div>
 </div>
 
-<div class="container">
+<div class="container" id="main">
 	<div class="row" style="margin-bottom: 20px;">
 
 		<!-- left part of page -->
@@ -53,7 +54,6 @@
 					<small>Josh Wills of <a href="http://www.cloudera.com/content/cloudera/en/home.html">Cloudera</a></small>
 				-->
 			</blockquote>
-
 			<div id="about">
 				<h2>About Me</h2>
 				<p>
