--- a/index.html
+++ b/index.html
@@ -5,11 +5,6 @@
 <title>Kevin Ushey</title>
 <link href="bootstrap/css/bootstrap.min.css" rel="stylesheet">
 <link rel="stylesheet" href="css/styles.css"/>
-<style>
-	body {
-		padding-top: 60px; /* 60px to make the container go all the way to the bottom of the topbar */
-	}
-</style>
 <link href="bootstrap/css/bootstrap-responsive.min.css" rel="stylesheet">
 <link href="FontAwesome/css/font-awesome.min.css" rel="stylesheet">
 </head>
@@ -39,7 +34,7 @@
 </div>
 
 <div class="container" id="main">
-	<div class="row" style="margin-bottom: 20px;">
+	<div class="row">
 
 		<!-- left part of page -->
 		<div class="span8">
