--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 		<!-- left part of page -->
 		<div class="span8">
 			<h1 style="color: #445555;">Kevin Ushey</h1>
-			<p class="lead">Data Scientist / Statistical Programmer</p>
+			<p class="lead">Data Scientist / Software Engineer</p>
 			<blockquote>
 				<p style="font-size: 11pt">
 					Data Scientist (noun): A person who is better at statistics than any software engineer,
@@ -52,10 +52,13 @@
 			<div id="about">
 				<h2>About Me</h2>
 				<p>
-					I am a statistical programmer at the <a href="http://www.rglab.org/">rglab</a>
+					I am a software engineer at <a href="http://www.rstudio.com">RStudio</a>, and previously worked as
+					as a statistical programmer at the <a href="http://www.rglab.org/">rglab</a>
 					within the <a href="http://www.fhcrc.org/en.html">Fred Hutchinson Cancer Research Center</a>.
 					I am an accomplished R programmer, but am also experienced with Python, JavaScript, C, C++ and Java
-					programming.
+					programming. I've made a number of contributions to <a href="http://www.rcpp.org/">Rcpp</a> and other
+					pacakges within the Rcpp family. I am a tool builder -- I enjoy developing computational tools that
+					help researchers and scientists to achieve their analytic goals.
 				</p>
 				<p>
 					I completed an MSc in Statistics at the University of British Columbia, under the supervision of
@@ -102,18 +105,6 @@
 					<small>
 						<!-- <a href="http://cran.r-project.org/web/packages/rsnps/">CRAN</a>, -->
 						<a href="https://github.com/rOpenSci/rsnps">GitHub</a>
-					</small>
-				</p>
-
-				<h4>EasySVGAnnotation</h4>
-				<p>
-					This project exports a function, <code>makesvg</code>, that can be used to generate tool-tip augmented
-					SVG graphics from R lattice plots. The tool-tip dialog information is inherited from the data frame
-					containing the vectors to be plotted, and the tool-tips are dynamically displayed on mouseover
-					through JavaScript. These plots embed particularly well in R Markdown documents.
-					<br>
-					<small>
-						<a href="https://github.com/kevinushey/EasySVGAnnotation">GitHub</a>
 					</small>
 				</p>
 
