Typo + rsnps is on CRAN

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 					within the <a href="http://www.fhcrc.org/en.html">Fred Hutchinson Cancer Research Center</a>.
 					I am an accomplished R programmer, but am also experienced with Python, JavaScript, C, C++ and Java
 					programming. I've made a number of contributions to <a href="http://www.rcpp.org/">Rcpp</a> and other
-					pacakges within the Rcpp family. I am a tool builder -- I enjoy developing computational tools that
+					packages within the Rcpp family. I am a tool builder -- I enjoy developing computational tools that
 					help researchers and scientists to achieve their analytic goals.
 				</p>
 				<p>
@@ -103,7 +103,7 @@
 					with SNPs of interest.
 					<br>
 					<small>
-						<!-- <a href="http://cran.r-project.org/web/packages/rsnps/">CRAN</a>, -->
+						<a href="http://cran.r-project.org/web/packages/rsnps/">CRAN</a>,
 						<a href="https://github.com/rOpenSci/rsnps">GitHub</a>
 					</small>
 				</p>
