--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
 					<li><a href="#projects">Projects</a></li>
 					<li><a href="#publications">Publications</a></li>
 					<li><a href="#contact">Contact</a></li>
+					<li><a href="blog">Blog</a></li>
 				</ul>
 			</div><!--/.nav-collapse -->
 		</div>
