--- a/index.html
+++ b/index.html
@@ -51,15 +51,14 @@
 				-->
 			</blockquote>
 			<div id="about">
+
 				<h2>About Me</h2>
 				<p>
 					I am a software engineer at <a href="http://www.rstudio.com">RStudio</a>, and previously worked as
 					as a statistical programmer at the <a href="http://www.rglab.org/">rglab</a>
 					within the <a href="http://www.fhcrc.org/en.html">Fred Hutchinson Cancer Research Center</a>.
-					I am an accomplished R programmer, but am also experienced with Python, JavaScript, C, C++ and Java
-					programming. I've made a number of contributions to <a href="http://www.rcpp.org/">Rcpp</a> and other
-					packages within the Rcpp family. I am a tool builder -- I enjoy developing computational tools that
-					help researchers and scientists to achieve their analytic goals.
+					I am a tool builder -- I enjoy developing computational tools that help researchers and scientists
+					to achieve their analytic goals.
 				</p>
 				<p>
 					I completed an MSc in Statistics at the University of British Columbia, under the supervision of
@@ -70,80 +69,9 @@
 				</p>
 			</div>
 
-			<div id="projects">
-				<h2>Projects</h2>
+			<div id="contact">
 
-				<h4>Kmisc</h4>
-				<p>
-					A set of miscellaneous functions for everything from data subsetting and reshaping functions for
-					faster and easier file I/O and wrapper functions for easy generation of C++-backed apply and tapply-style
-					functions. Essentially, this package is a grab-bag of functions that have made my life easier
-					when programming in R.
-					<br>
-					<small>
-						<a href="http://cran.r-project.org/web/packages/Kmisc/index.html">CRAN</a>,
-						<a href="https://github.com/kevinushey/Kmisc">GitHub</a>
-					</small>
-				</p>
-
-				<h4>timeit</h4>
-				<p>
-					Easy profiling of blocks of R code, with some nice functions for plotting and summarizing of the
-					benchmark results. This package can be used to identify bottlenecks in blocks of code.
-					<br>
-					<small>
-						<a href="http://cran.r-project.org/web/packages/timeit/">CRAN</a>,
-						<a href="https://github.com/kevinushey/timeit">GitHub</a>
-					</small>
-				</p>
-
-				<h4>rsnps</h4>
-				<p>
-					I contributed functions for querying SNP information from NCBI's dbSNP, as well
-					as an easy wrapper to the Broad Institute's SNAP for identifying SNPs in high linkage disequilibrium
-					with SNPs of interest.
-					<br>
-					<small>
-						<a href="http://cran.r-project.org/web/packages/rsnps/">CRAN</a>,
-						<a href="https://github.com/rOpenSci/rsnps">GitHub</a>
-					</small>
-				</p>
-
-				<h4>Rcpp Gallery</h4>
-				<p>
-					The <a href="http://gallery.rcpp.org/">Rcpp Gallery</a> is a set of user-submitted articles on
-					using <a href="http://dirk.eddelbuettel.com/code/rcpp.html">Rcpp</a> 
-					to write, compile and link C++ code that can operate on R objects.
-					I have contributed a number of articles on the basics of using Rcpp:
-				</p>
-				<ul>
-					<li>
-						<a href="http://gallery.rcpp.org/articles/rcpp-wrap-and-recurse/">Dynamic Wrapping and Recursion with Rcpp</a>
-					</li>
-					<li>
-						<a href="http://gallery.rcpp.org/articles/boost-foreach/">Using Boost's foreach macro</a>
-					</li>
-					<li>
-						<a href="http://gallery.rcpp.org/articles/fast-factor-generation/">Fast factor generation with Rcpp</a>
-					</li>
-					<li>
-						<a href="http://gallery.rcpp.org/articles/strings_with_rcpp/">Handling strings with Rcpp</a>
-					</li>
-				</ul>
-			</div>
-
-			<div id="publications">
-				<h2>Publications</h2>
-				<strong>
-					Synthetic Lethality of Cohesins with PARPs and Replication Fork Mediators
-				</strong>
-					(<a href="http://www.plosgenetics.org/article/info%3Adoi%2F10.1371%2Fjournal.pgen.1002574">PLOS Genetics</a>)<br />
-				<small>
-					Jessica L. McLellan, Nigel J. O'Neil, Irene Barrett, Elizabeth Ferree, Derek M. van Pel,
-					Kevin Ushey, Payal Sipahimalani, Jennifer Bryan, Ann M. Rose, Philip Hieter
-				</small>
-
-				<h2 id="contact">Contact</h2>
+				<h2>Contact</h2>
 				<ul class="unstyled">
 					<li>
 						<i class="icon-twitter"></i><strong> Twitter: </strong> <a href="https://twitter.com/kevin_ushey">@kevin_ushey</a>
