--- a/index.html
+++ b/index.html
@@ -37,17 +37,8 @@
 
 		<!-- left part of page -->
 		<div class="span8">
-			<h1 style="color: #445555;">Kevin Ushey</h1>
-			<p class="lead">Data Scientist / Software Engineer</p>
-			<blockquote>
-				<p style="font-size: 11pt">
-					Data Scientist (noun): A person who is better at statistics than any software engineer,
-					and better at software engineering than any statistician.
-				</p>
-				<!--
-					<small>Josh Wills of <a href="http://www.cloudera.com/content/cloudera/en/home.html">Cloudera</a></small>
-				-->
-			</blockquote>
+			<h1>Kevin Ushey</h1>
+			<p class="lead">Software Engineer</p>
 			<div id="about">
 
 				<h2>About Me</h2>
